--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,8 +2,7 @@
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>TestVaadin</display-name>
 	<context-param>
-		<description>
-		Vaadin production mode</description>
+        <description>Vaadin production mode</description>
 		<param-name>productionMode</param-name>
 		<param-value>false</param-value>
 	</context-param>
@@ -11,10 +10,9 @@
 		<servlet-name>Testvaadin Application</servlet-name>
 		<servlet-class>com.vaadin.terminal.gwt.server.ApplicationServlet</servlet-class>
 		<init-param>
-			<description>
-			Vaadin application class to start</description>
+            <description>Vaadin application class to start</description>
 			<param-name>application</param-name>
-			<param-value>com.example.testvaadin.TestvaadinApplication</param-value>
+			<param-value>com.example.testvaadin.TestVaadinApplication</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
@@ -22,11 +20,7 @@
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
